Java output checking runthrough